test/dryrun/no_name/with_object_selector/mustnothave_mixed_noncompliant/input_unmatched.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: wrong-3-ingress
spec:
  ingressClassName: wrong-name
  rules:
    - http: 
       paths: 
         - path: /testpath
           pathType: Prefix
           backend:
            service:
              name: test
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: good-ingress-2
spec:
  ingressClassName: test
  rules:
    - http: 
       paths: 
         - path: /testpath
           pathType: Prefix
           backend:
            service:
              name: test
              port:
                number: 801
