test/dryrun/no_name/with_object_selector/mustnothave_mixed_noncompliant/output.txt
# Status compare:
[32m.compliancyDetails[0] matches[0m
[32m.compliancyDetails matches[0m
[32m.compliant: 'NonCompliant' does match 'NonCompliant'[0m
[32m.relatedObjects[0] matches[0m
[32m.relatedObjects[1] matches[0m
[32m.relatedObjects matches[0m
[32m[1m Expected status matches the actual status [0m[0m

# Diffs:
networking.k8s.io/v1 Ingress default/wrong-1-ingress:

networking.k8s.io/v1 Ingress default/wrong-2-ingress:

# Compliance messages:
NonCompliant; violation - ingresses [wrong-1-ingress, wrong-2-ingress] found in namespace default
