test/dryrun/no_name/with_object_selector/mustnothave_mixed_noncompliant/policy.yaml
apiVersion: policy.open-cluster-management.io/v1
kind: ConfigurationPolicy
metadata:
  name: test-policy-1
spec:
  remediationAction: inform
  object-templates:
    - complianceType: mustnothave
      objectDefinition:
        apiVersion: networking.k8s.io/v1
        kind: Ingress
        metadata:
          namespace: default
        spec:
          ingressClassName: wrong-name
      objectSelector:
        matchExpressions:
          - key: test.dev/foo
            operator: Exists
